--- a/app/views/example.ejs
+++ b/app/views/example.ejs
@@ -3,6 +3,8 @@
 <head>
     <title>Example</title>
     <meta charset="utf-8">
+    <link rel="icon" type="image/png" href="/favicon.png">
+    <link rel="apple-touch-icon" href="/favicon.png">
 </head>
 <body>
     <h1>Example</h1>
